@@ -36,7 +36,8 @@ type Map = Map.HashMap
 
 -- Increment every time the on-disk format/semantics change,
 -- @i@ is for the users version number
-databaseVersion i = "SHAKE-DATABASE-8-" ++ show (i :: Int) ++ "\r\n"
+databaseVersion :: String -> String
+databaseVersion x = "SHAKE-DATABASE-8-" ++ tail (init $ show x) ++ "\r\n"
 
 
 withStorage
